# android-dnn

./: gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/docs/: PROJECT.md
app/src/androidTest/java/com/example/game_test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DnnDetector.cpp  DnnDetector.h  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  main.cpp
app/src/main/java/com/example/game_test/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/game_test/: ExampleUnitTest.java
docs/: camera-dnn-sequence.md  performance-optimization.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
